Bug 448994 – <video> element causes floating point exception [@ oggplay_callback_predetected] when playing theora file (updates liboggplay to svn r3693)