media/liboggplay/src/liboggplay/oggplay_data.c
@@ -32,7 +32,7 @@
 
 /*
  * oggplay_data.c
- * 
+ *
  * Shane Stephens <shane.stephens@annodex.net>
  */
 
@@ -54,7 +54,7 @@
 /*
  * the normal lifecycle for a frame is:
  *
- * (1) frame gets decoded and added to list with a locking value of 1 
+ * (1) frame gets decoded and added to list with a locking value of 1
  * (2) frame gets delivered to user
  * (3) frame becomes out-of-date (its presentation time expires) and its
  *      lock is decremented
@@ -62,7 +62,7 @@
  *
  * This can be modified by:
  * (a) early consumption by user (user calls oggplay_mark_record_consumed)
- * (b) frame locking by user (user calls oggplay_mark_record_locked) and 
+ * (b) frame locking by user (user calls oggplay_mark_record_locked) and
  *     subsequent unlocking (user calls oggplay_mark_record_consumed)
  */
 
@@ -79,9 +79,9 @@ oggplay_data_initialise_list (OggPlayDecode *decode) {
  */
 void
 oggplay_data_add_to_list_end(OggPlayDecode *decode, OggPlayDataHeader *data) {
-  
+
   data->next = NULL;
-  
+
   if (decode->data_list == NULL) {
     decode->data_list = data;
     decode->end_of_data_list = data;
@@ -90,7 +90,7 @@ oggplay_data_add_to_list_end(OggPlayDecode *decode, OggPlayDataHeader *data) {
     decode->end_of_data_list = data;
   }
 
-} 
+}
 
 #define M(x) ((x) >> 32)
 
@@ -117,25 +117,25 @@ _print_list(char *name, OggPlayDataHeader *p) {
     }
     printf("\n");
 }
- 
+
 
 void
 oggplay_data_add_to_list (OggPlayDecode *decode, OggPlayDataHeader *data) {
-  
+
   /*
    * if this is a packet with an unknown display time, prepend it to
    * the untimed_data_list for later timestamping.
    */
-  
+
   ogg_int64_t samples_in_next_in_list;
- 
+
   //_print_list("before", decode->data_list);
   //_print_list("untimed before", decode->untimed_data_list);
-  
+
   if (data->presentation_time == -1) {
     data->next = decode->untimed_data_list;
     decode->untimed_data_list = data;
-  } else { 
+  } else {
     /*
      * process the untimestamped data into the timestamped data list.
      *
@@ -143,17 +143,17 @@ oggplay_data_add_to_list (OggPlayDecode *decode, OggPlayDataHeader *data) {
      */
     ogg_int64_t presentation_time         = data->presentation_time;
     samples_in_next_in_list               = data->samples_in_record;
-    
+
 
     while (decode->untimed_data_list != NULL) {
       OggPlayDataHeader *untimed = decode->untimed_data_list;
 
-      presentation_time -= 
+      presentation_time -=
                 samples_in_next_in_list * decode->granuleperiod;
-      untimed->presentation_time = presentation_time; 
+      untimed->presentation_time = presentation_time;
       decode->untimed_data_list = untimed->next;
       samples_in_next_in_list = untimed->samples_in_record;
-     
+
       if (untimed->presentation_time >= decode->player->presentation_time) {
         oggplay_data_add_to_list_front(decode, untimed);
       } else {
@@ -166,16 +166,16 @@ oggplay_data_add_to_list (OggPlayDecode *decode, OggPlayDataHeader *data) {
 
     /*
      * if the StreamInfo is still at uninitialised, then this is the first
-     * meaningful data packet!  StreamInfo will be updated to 
+     * meaningful data packet!  StreamInfo will be updated to
      * OGGPLAY_STREAM_INITIALISED in oggplay_callback_info.c as part of the
      * callback process.
      */
     if (decode->stream_info == OGGPLAY_STREAM_UNINITIALISED) {
       decode->stream_info = OGGPLAY_STREAM_FIRST_DATA;
     }
-      
+
   }
-  
+
   //_print_list("after", decode->data_list);
   //_print_list("untimed after", decode->untimed_data_list);
 
@@ -198,12 +198,12 @@ oggplay_data_shutdown_list (OggPlayDecode *decode) {
   oggplay_data_free_list(decode->data_list);
   oggplay_data_free_list(decode->untimed_data_list);
 
-}  
+}
 
 /*
  * this function removes any displayed, unlocked frames from the list.
  *
- * this function also removes any undisplayed frames that are before the 
+ * this function also removes any undisplayed frames that are before the
  * global presentation time.
  */
 void
@@ -214,7 +214,7 @@ oggplay_data_clean_list (OggPlayDecode *decode) {
   OggPlayDataHeader * p      = NULL;
 
   while (header != NULL) {
-    if 
+    if
     (
       header->lock == 0
       &&
@@ -230,7 +230,7 @@ oggplay_data_clean_list (OggPlayDecode *decode) {
         )
       )
 
-    ) 
+    )
     {
       if (p == NULL) {
         decode->data_list = decode->data_list->next;
@@ -253,7 +253,7 @@ oggplay_data_clean_list (OggPlayDecode *decode) {
 }
 
 void
-oggplay_data_initialise_header (OggPlayDecode *decode, 
+oggplay_data_initialise_header (OggPlayDecode *decode,
                 OggPlayDataHeader *header) {
   /*
    * the frame is not cleaned until its presentation time has passed.  We'll
@@ -267,37 +267,37 @@ oggplay_data_initialise_header (OggPlayDecode *decode,
 }
 
 void
-oggplay_data_handle_audio_data (OggPlayDecode *decode, void *data, 
+oggplay_data_handle_audio_data (OggPlayDecode *decode, void *data,
       int samples, int samplesize) {
 
   int                   num_channels;
   OggPlayAudioRecord  * record;
- 
+
   num_channels = ((OggPlayAudioDecode *)decode)->sound_info.channels;
-  record = (OggPlayAudioRecord*)calloc(sizeof(OggPlayAudioRecord) + 
+  record = (OggPlayAudioRecord*)calloc(sizeof(OggPlayAudioRecord) +
                   samples * samplesize * num_channels, 1);
 
   oggplay_data_initialise_header(decode, &(record->header));
 
   record->header.samples_in_record = samples;
-  
+
   record->data = (void *)(record + 1);
 
   memcpy(record->data, data, samples * samplesize * num_channels);
   /*
-  printf("[%f%f%f]\n", ((float *)record->data)[0], ((float *)record->data)[1], 
+  printf("[%f%f%f]\n", ((float *)record->data)[0], ((float *)record->data)[1],
                     ((float *)record->data)[2]);
   */
   oggplay_data_add_to_list(decode, &(record->header));
 }
 
 void
-oggplay_data_handle_cmml_data(OggPlayDecode *decode, unsigned char *data, 
+oggplay_data_handle_cmml_data(OggPlayDecode *decode, unsigned char *data,
                 int size) {
 
   OggPlayTextRecord * record;
-  
-  record = 
+
+  record =
       (OggPlayTextRecord*)calloc (sizeof(OggPlayTextRecord) + size + 1, 1);
   oggplay_data_initialise_header(decode, &(record->header));
 
@@ -308,11 +308,11 @@ oggplay_data_handle_cmml_data(OggPlayDecode *decode, unsigned char *data,
   record->data[size] = '\0';
 
   oggplay_data_add_to_list(decode, &(record->header));
-  
+
 }
 
 void
-oggplay_data_handle_theora_frame (OggPlayTheoraDecode *decode, 
+oggplay_data_handle_theora_frame (OggPlayTheoraDecode *decode,
                                     yuv_buffer *buffer) {
 
   int                   size = sizeof (OggPlayVideoRecord);
@@ -323,7 +323,7 @@ oggplay_data_handle_theora_frame (OggPlayTheoraDecode *decode,
   unsigned char       * q2;
   OggPlayVideoRecord  * record;
   OggPlayVideoData    * data;
-  
+
   if (buffer->y_stride < 0) {
     size -= buffer->y_stride * buffer->y_height;
     size -= buffer->uv_stride * buffer->uv_height * 2;
@@ -331,7 +331,7 @@ oggplay_data_handle_theora_frame (OggPlayTheoraDecode *decode,
     size += buffer->y_stride * buffer->y_height;
     size += buffer->uv_stride * buffer->uv_height * 2;
   }
- 
+
   /*
    * we need to set the output strides to the input widths because we are
    * trying not to pass negative output stride issues on to the poor user.
@@ -344,7 +344,7 @@ oggplay_data_handle_theora_frame (OggPlayTheoraDecode *decode,
   data->y = (unsigned char *)(record + 1);
   data->u = data->y + (decode->y_stride * decode->y_height);
   data->v = data->u + (decode->uv_stride * decode->uv_height);
-  
+
   /*
    * *grumble* theora plays silly buggers with pointers so we need to do
    * a row-by-row copy (stride may be negative)
@@ -380,7 +380,7 @@ oggplay_data_handle_kate_data(OggPlayKateDecode *decode, const kate_event *ev) {
   // TODO: should be able to send the data rendered as YUV data, but just text for now
 
   OggPlayTextRecord * record;
-  
+
   record = (OggPlayTextRecord*)calloc (sizeof(OggPlayTextRecord) + ev->len0, 1);
   oggplay_data_initialise_header(&decode->decoder, &(record->header));
 
